# wenet

.github/workflows/: android.yml
runtime/android/: build.gradle
runtime/android/app/: build.gradle
runtime/android/app/src/main/cpp/: CMakeLists.txt
